--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "/README.md"
   ],
   "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-uglify": "^3.0.1"
+    "colors": "^1.3.3"
   },
   "devDependencies": {
-    "gulp-rename": "^1.4.0"
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-terser": "^1.1.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
