--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "/README.md"
   ],
   "dependencies": {
-    "colors": "^1.3.3"
+    "colors": "^1.3.3",
+    "micromatch": "^3.1.10"
   },
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-terser": "^1.1.7"
+    "gulp-terser": "^1.1.7",
+    "laravel-mix": "^4.0.15"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
