--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "micromatch": "^3.1.10"
   },
   "devDependencies": {
+    "cross-spawn": "^6.0.5",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-terser": "^1.1.7",
