--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   ],
   "dependencies": {
     "colors": "^1.3.3",
+    "flat-cache": "^2.0.1",
+    "globby": "^9.2.0",
     "micromatch": "^3.1.10"
   },
   "devDependencies": {
     "cross-spawn": "^6.0.5",
+    "debug": "^4.1.1",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-terser": "^1.1.7",
