fix: logging noise! (debug) + Update: README: add logging section + update: gulpfile (add build) + update: package.json (add some scripts) + update: test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laravel-mix-glob",
   "version": "1.1.4",
-  "description": "Laravel mix extension that add support for glob. It wrap nicely around laravel mix. Add the glob feature, with some cool features. And allow an easy access to laravel mix instance too. Simple api. ",
+  "description": "Laravel mix extension that add support for glob. It wrap nicely around laravel mix. Add the glob feature, with some cool features. And allow an easy access to laravel mix instance too. Simple api.",
   "main": "dist/laravelMixGlob.min.js",
   "directories": {
     "example": "example"
@@ -25,6 +25,8 @@
     "laravel-mix": "^4.0.15"
   },
   "scripts": {
+    "build": "npx gulp build",
+    "watch": "npx gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,7 +42,9 @@
     "glob",
     "feature",
     "support",
-    "assets"
+    "assets",
+    "extension",
+    "webpack"
   ],
   "author": "Mohamed Lamine Allal <allaldevelopment@gmail.com>",
   "license": "MIT"
