--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -34,16 +34,18 @@ body:
     attributes:
       label: webpack.mix.js config
       render: javascript
-  - type: markdown
+  - type: text area
     id: version
     attributes:
+      label: Versions
+      description: Provide the version of the different mentionned packages
       value: |
-        ### Provide the versions
         **laravel-mix**
         
         **laravel-mix-glob**
         
         **webpack**
+
     validations:
       required: true
   - type: textarea
