--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-.history
-/node_modules/
-package-lock.json
+.history/
+node_modules/
+dist/
+garbage/
+test_space/
+coverage/
+pnpm-lock.yaml
+mix-manifest.json
+.DS_Store
