--- a/package.json
+++ b/package.json
@@ -1,51 +1,128 @@
 {
   "name": "laravel-mix-glob",
   "version": "1.1.8",
-  "description": "Laravel mix extension that add support for glob. It wrap nicely around laravel mix. Add the glob feature, with some cool features. And allow an easy access to laravel mix instance too. Simple api.",
-  "main": "dist/laravelMixGlob.min.js",
-  "directories": {
-    "example": "example"
-  },
-  "files": [
-    "/dist",
-    "/README.md"
+  "description": "Laravel mix extension that add support for globs usage with an extensive concise api. For a more natural boosted productivity and dynamic. Configure once and forget about adding the files each time.",
+  "keywords": [
+    "laravel",
+    "laravel-mix",
+    "laravel-mix-glob",
+    "glob",
+    "extension",
+    "feature",
+    "support",
+    "assets",
+    "webpack"
   ],
-  "dependencies": {
-    "colors": "^1.3.3",
-    "flat-cache": "^2.0.1",
-    "globby": "^9.2.0",
-    "micromatch": "^3.1.10"
-  },
-  "devDependencies": {
-    "cross-spawn": "^6.0.5",
-    "debug": "^4.1.1",
-    "gulp": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-terser": "^1.1.7",
-    "laravel-mix": "^4.0.15"
-  },
-  "scripts": {
-    "build": "npx gulp build",
-    "watch": "npx gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "homepage": "https://github.com/MohamedLamineAllal/laravel-mix-glob",
+  "bugs": {
+    "url": "https://github.com/MohamedLamineAllal/laravel-mix-glob/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MohamedLamineAllal/laravel-mix-glob.git"
   },
-  "bugs": {
-    "url": "https://github.com/MohamedLamineAllal/laravel-mix-glob/issues"
-  },
-  "homepage": "https://github.com/MohamedLamineAllal/laravel-mix-glob",
-  "keywords": [
-    "laravel-mix",
-    "glob",
-    "feature",
-    "support",
-    "assets",
-    "extension",
-    "webpack"
-  ],
+  "license": "MIT",
   "author": "Mohamed Lamine Allal <allaldevelopment@gmail.com>",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "files": [
+    "/dist",
+    "/README.md",
+    "/CONTRIBUTING.md",
+    "/LICENSE"
+  ],
+  "scripts": {
+    "prepare": "ts-patch install -s",
+    "build": "rollup -c",
+    "lint": "eslint 'src/**/*.ts' '*.{js,ts}' --ignore-pattern __fixtures__ --quiet",
+    "lint:fix": "npm run lint -- --fix",
+    "buildAndTest": "npm-run-all -s build test",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "test:units": "jest src",
+    "test:e2e": "jest e2e-tests",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "docs:build": "gulp docsBuild"
+  },
+  "dependencies": {
+    "chokidar": "^3.5.3",
+    "colors": "^1.4.0",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "fast-glob": "^3.2.12",
+    "flat-cache": "^3.0.4",
+    "laravel-mix": "^6.0.49",
+    "micromatch": "^4.0.5",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@jest/globals": "^29.3.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@swc/core": "^1.3.22",
+    "@themagician/tsconfig-react": "^1.0.2",
+    "@types/chokidar": "^2.1.3",
+    "@types/cross-spawn": "^6.0.2",
+    "@types/debug": "^4.1.7",
+    "@types/flat-cache": "^2.0.0",
+    "@types/jest": "^29.2.4",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "@types/lodash.uniq": "^4.5.7",
+    "@types/micromatch": "^4.0.2",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/rimraf": "^3.0.2",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "babel-jest": "^29.3.1",
+    "babel-plugin-module-resolver-tsconfig": "^1.0.22",
+    "commitlint": "^17.4.4",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "fs-extra": "^11.1.0",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-replace": "^1.1.4",
+    "jest": "^29.3.1",
+    "laravel-mix-swc": "^0.3.2",
+    "lefthook": "^1.0.5",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.uniq": "^4.5.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
+    "resolve-url-loader": "^5.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.18.0",
+    "rollup-plugin-tsconfig-paths": "^1.4.0",
+    "rollup-plugin-typescript-paths": "^1.4.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "sass": "^1.58.3",
+    "sass-loader": "^12.1.0",
+    "snapman": "^1.0.10",
+    "swc-loader": "^0.2.3",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^2.1.0",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
