--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install npm dependencies
         run: pnpm install
 
+      - name: Build dist
+        run: npm run build
+
       - name: Run test
         run: npm run test
         if: matrix.node != env.NODE_COV
